[tool.poetry]
name = "projeto1-conversor-moedas"
version = "0.1.0"
description = ""
authors = ["Bruno Barella <brunobarella@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
